set up html layout

--- a/search-results.html
+++ b/search-results.html
@@ -18,7 +18,7 @@
   </div>
 </header>
 <body>
-  <div class="container">
+  <div >
     <div class="row">
       
       <div class="col-4">col-4</div>
@@ -51,11 +51,59 @@
 
     </div>
     <div class="col-8">col-8
-    <div class="col-12 col-md-9 p-3 text-light">
+    <!-- <div class="col-12 col-md-9 p-3 text-light"> -->
       
       <h2 id="city-current-cond">City (MM/DD/YYYY) 
         <span id="result-"></span></h2>
       <div id="result-content"></div>
+
+      <div class="row">
+        <div class="col">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">future day 1</h5>
+              <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card" >
+            <div class="card-body">
+              <h5 class="card-title">future day 2</h5>
+              <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">future day 3</h5>
+              <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card" >
+            <div class="card-body">
+              <h5 class="card-title">future day 4</h5>
+              <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">future day 5</h5>
+              <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+          </div>
+        </div>
+      </div>
     </div></div>
   </div>
 
