--- a/index.html
+++ b/index.html
@@ -1,70 +1,107 @@
 <!DOCTYPE html>
- <html lang="en">
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Weather Dashboard</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400&family=Merriweather:wght@700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+    />
+    <link rel="stylesheet" href="./assets/css/jass.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
+  </head>
+  <body>
+    <header class="text-center bg-header">
+      <div>
+        <a class="navbar-brand" href="#">Weather Dashboard</a>
+      </div>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Weather Dashboard</title>
-  <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400&family=Merriweather:wght@700&display=swap"
-    rel="stylesheet" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
-    <link  rel="stylesheet" href="./assets/css/jass.css" />
-  <link rel="stylesheet" href="./assets/css/style.css" />
-</head> 
-
-<header class="text-center bg-header">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">Weather Dashboard</a>
-  </div>
-</nav>
-<body>
-  <header class="text-primary"> Weather </header>
-<div class="container">
-
-  <div class="row">
-    <div class="col-4">col-4
-      <div class="input-group mb-3">
-        <nav class="navbar navbar-light bg-light">
-          <div class="container-fluid">
-    
-          </div>
-        </nav>
-      </div></div>
-  
-  </div>
-</div>
-
-
-<div class="row">
-  <div class="flex-row col-4 align-left min-100-vh bg-primary">
-    <div class="col-12 col-md-9 flex-column align-left bg-light p-5">
-      
-      <form id="search-form" class="form form-control me-2">
-        <h1 class="card-title">Search for a City:</h1> <input id="search-input" class="form-input" type="text" placeholder="San Diego">
+    </header>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-4">
+          <h1 class="text-primary">Search for a City: </h1>
+      <form id="search-form" class="mb-2">
+        <input id="search-input" class="form-input w-100" type="text" placeholder="Search!">
         <button class="btn btn-info btn-block">Search</button>
       </form>
-      <div class="card" style="width: 18rem;">
-        <img src="..." class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        </div>
-        <ul class="list-group list-group-flush">
-          <li class="list-group-item">An item</li>
-          <li class="list-group-item">A second item</li>
-          <li class="list-group-item">A third item</li>
+      <hr>
+      <ul class="list-group list-group-flush">
+        <li class="list-group-item">Previous searched city</li>
         </ul>
-        <div class="card-body">
-          <a href="#" class="card-link">Card link</a>
-          <a href="#" class="card-link">Another link</a>
+        </div>
+        <div class="col-8">
+          <div class="row">
+            Selected City (MM/DD/YYYY)+ sun picture
+            <p class="card-text">Temp:</p>
+            <p class="card-text">Wind:</p>
+            <p class="card-text">Humidity:</p>
+          </div>
+          <div class="row">
+            5 day forecast:
+          </div>
+          <div class="row">
+            <div class="col">
+              <div class="card">
+                <div class="card-body">
+                  <h5 class="card-title">future day 1</h5>
+                  <p id="image">sun picture</p>
+                  <p class="card-text">Temp:</p>
+                  <p class="card-text">Wind:</p>
+                  <p class="card-text">Humidity:</p>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card" >
+                <div class="card-body">
+                  <h5 class="card-title">future day 2</h5>
+                  <div id="image"></div>
+                  <p class="card-text"></p>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card">
+                <div class="card-body">
+                  <h5 class="card-title">future day 3</h5>
+                  <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card" >
+                <div class="card-body">
+                  <h5 class="card-title">future day 4</h5>
+                  <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card">
+                <div class="card-body">
+                  <h5 class="card-title">future day 5</h5>
+                  <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="col-8">col-8</div>
-  </div></div>
-    <!-- Added link to the jQuery library -->
-  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-  <script src="./assets/js/script.js"></script>
-</body>
 
-</html> -->
+
+    </div>
+
+    <!-- Added link to the jQuery library -->
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="./assets/js/script.js"></script>
+  </body>
+</html>
