--- a/index.html
+++ b/index.html
@@ -10,17 +10,16 @@
     />
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous"
     />
     <link rel="stylesheet" href="./assets/css/jass.css" />
     <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
   <body>
-    <header class="text-center bg-header">
-      <div>
-        <a class="navbar-brand" href="#">Weather Dashboard</a>
+    <header class="header">
+      <div >
+        <span>Weather Dashboard</span>
       </div>
-
     </header>
     <div class="container-fluid">
       <div class="row">
@@ -32,12 +31,12 @@
       </form>
       <hr>
       <ul class="list-group list-group-flush">
-        <li class="list-group-item">Previous searched city</li>
+        <li class="list-group-item"id= "citySearchHistory">Previous searched city</li>
         </ul>
         </div>
         <div class="col-8">
-          <div class="row">
-            Selected City (MM/DD/YYYY)+ sun picture
+          <div class="row" id="curWeather">
+            
             <p class="card-text">Temp:</p>
             <p class="card-text">Wind:</p>
             <p class="card-text">Humidity:</p>
@@ -49,7 +48,7 @@
             <div class="col">
               <div class="card">
                 <div class="card-body">
-                  <h5 class="card-title">future day 1</h5>
+                  <h5 class="card-title" div="oneDayF">future day 1</h5>
                   <p id="image">sun picture</p>
                   <p class="card-text">Temp:</p>
                   <p class="card-text">Wind:</p>
