--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <h1 class="text-primary">Search for a City: </h1>
       <form id="search-form" class="mb-2">
         <input id="search-input" class="form-input w-100" type="text" placeholder="Search!">
-        <button class="btn btn-info btn-block">Search</button>
+        <button class="btn btn-info btn-block" id="searchBtn">Search</button>
       </form>
       <hr>
       <ul class="list-group list-group-flush">
@@ -36,14 +36,15 @@
         </div>
         <div class="col-8">
           <div class="row" id="curWeather">
-            
-            <p class="card-text">Temp:</p>
-            <p class="card-text">Wind:</p>
-            <p class="card-text">Humidity:</p>
+            <h1 id="curCity">City</h1>
+            <img id="curIcon"/>
+            <p class="card-text" id="curTemp">Temp:</p>
+            <p class="card-text" id="curWind">Wind:</p>
+            <p class="card-text" id="curHumidity">Humidity:</p>
           </div>
-          <div class="row">
+          <h2 class="row">
             5 day forecast:
-          </div>
+          </h2>
           <div class="row">
             <div class="col">
               <div class="card">
@@ -100,6 +101,10 @@
     </div>
 
     <!-- Added link to the jQuery library -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js"
+    integrity="sha256-iu/zLUB+QgISXBLCW/mcDi/rnf4m4uEDO0wauy76x7U="
+    crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="./assets/js/script.js"></script>
   </body>
