--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="col-8">
           <div class="row" id="curWeather">
             <h1 id="curCity">City</h1>
-            <img id="curIcon"/>
+            <img class= "icon" id="curIcon"/>
             <p class="card-text" id="curTemp">Temp:</p>
             <p class="card-text" id="curWind">Wind:</p>
             <p class="card-text" id="curHumidity">Humidity:</p>
@@ -49,47 +49,55 @@
             <div class="col">
               <div class="card">
                 <div class="card-body">
-                  <h5 class="card-title" div="oneDayF">future day 1</h5>
-                  <p id="image">sun picture</p>
-                  <p class="card-text">Temp:</p>
-                  <p class="card-text">Wind:</p>
-                  <p class="card-text">Humidity:</p>
+                  <h5 class="card-title" div="forecast-date-1">future day 1</h5>
+                  <img class="icon" id="imageForecast1"/>
+                  <p class="card-text" id="forecast-temp-1">Temp:</p>
+                  <p class="card-text" id="forecast-wind-1">Wind:</p>
+                  <p class="card-text" id="forecast-humidity-1">Humidity:</p>
                 </div>
               </div>
             </div>
             <div class="col">
               <div class="card" >
                 <div class="card-body">
-                  <h5 class="card-title">future day 2</h5>
-                  <div id="image"></div>
-                  <p class="card-text"></p>
+                  <h5 class="card-title" div="forecast-date-1">future day 1</h5>
+                  <img class="icon" id="imageForecast1"/>
+                  <p class="card-text" id="forecast-temp-1">Temp:</p>
+                  <p class="card-text" id="forecast-wind-1">Wind:</p>
+                  <p class="card-text" id="forecast-humidity-1">Humidity:</p>
                 </div>
               </div>
             </div>
             <div class="col">
               <div class="card">
                 <div class="card-body">
-                  <h5 class="card-title">future day 3</h5>
-                  <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <h5 class="card-title" div="forecast-date-1">future day 1</h5>
+                  <img class="icon" id="imageForecast1"/>
+                  <p class="card-text" id="forecast-temp-1">Temp:</p>
+                  <p class="card-text" id="forecast-wind-1">Wind:</p>
+                  <p class="card-text" id="forecast-humidity-1">Humidity:</p>
                 </div>
               </div>
             </div>
             <div class="col">
               <div class="card" >
                 <div class="card-body">
-                  <h5 class="card-title">future day 4</h5>
-                  <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <h5 class="card-title" div="forecast-date-1">future day 1</h5>
+                  <img class="icon" id="imageForecast1"/>
+                  <p class="card-text" id="forecast-temp-1">Temp:</p>
+                  <p class="card-text" id="forecast-wind-1">Wind:</p>
+                  <p class="card-text" id="forecast-humidity-1">Humidity:</p>
                 </div>
               </div>
             </div>
             <div class="col">
               <div class="card">
                 <div class="card-body">
-                  <h5 class="card-title">future day 5</h5>
-                  <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <h5 class="card-title" div="forecast-date-1">future day 1</h5>
+                  <img class="icon" id="imageForecast1"/>
+                  <p class="card-text" id="forecast-temp-1">Temp:</p>
+                  <p class="card-text" id="forecast-wind-1">Wind:</p>
+                  <p class="card-text" id="forecast-humidity-1">Humidity:</p>
                 </div>
               </div>
             </div>
