--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </form>
       <hr>
       <ul class="list-group list-group-flush">
-        <li class="list-group-item"id= "citySearchHistory">Previous searched city</li>
+        <li class="list-group-item"id= "citySearchHistory search-history-container">Previous searched city</li>
         </ul>
         </div>
         <div class="col-8">
